--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Amirehh",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "connect-session-sequelize": "^6.1.1",
         "ejs": "^3.0.1",
