--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "nodemailer-sendgrid-transport": "^0.2.0",
         "pdfkit": "^0.11.0",
         "pug": "^2.0.4",
+        "request-promise": "^4.2.5",
         "sequelize": "^5.21.4"
     }
 }
