--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
         "pug": "^2.0.4",
         "request-promise": "^4.2.5",
         "sequelize": "^5.21.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
     }
 }
